--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
     "react-select": "^5.8.0",
     "vite-plugin-eslint": "^1.8.1",
