--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.10.0",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-responsive": "^9.0.2",
